--- a/setup.ipynb
+++ b/setup.ipynb
@@ -28,7 +28,7 @@
     "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "# TODO: Atualizar\n",
-    "CATALOG = 'perdomo_demos'\n",
+    "CATALOG = 'demo_catalog'\n",
     "SCHEMA = 'demo_agents'\n",
     "#################\n",
     "\n",
