Corrected function name in setuo

--- a/setup.ipynb
+++ b/setup.ipynb
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE OR REPLACE FUNCTION get_customer_billing_and_subs(customer_id_input BIGINT COMMENT 'customer ID used to retrive orders, billing and subscriptiosn')\n",
+    "CREATE OR REPLACE FUNCTION get_billing_and_subs(customer_id_input BIGINT COMMENT 'customer ID used to retrive orders, billing and subscriptiosn')\n",
     "RETURNS TABLE (\n",
     "    customer_id BIGINT,\n",
     "    subscription_id BIGINT,\n",
